# htmltrust-canonicalization

./: .gitignore  Makefile  README.md  composer.json  package.json  spec.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
conformance/: README.md  run-all.sh
conformance/fixtures/claims/: empty-claims.json  multiple-claims-ordering.json  normalize-name.json  normalize-value.json  single-claim.json  unicode-value-nfkc.json  value-with-internal-newline.json
conformance/fixtures/extract/: block-boundary-inserts-space.json  headings-and-paragraphs.json  html-entities-decoded.json  inline-formatting.json  inline-link-no-separator.json  inline-no-separator.json  list-items-separated.json  nested-block-elements.json  normalization-pipeline-applied.json  script-and-style-removed.json  simple-paragraph.json  table-cells-separated.json
conformance/fixtures/normalize/: arabic-tatweel-stripped.json  basic-ascii.json  cjk-corner-brackets.json  curly-double-quotes.json  curly-single-quotes.json  ellipsis.json  em-dash-to-hyphen.json  empty-string.json  guillemets-double.json  low-9-quotes.json  minus-sign-to-hyphen.json  multiline-mixed.json  nfkc-circled-digit.json  nfkc-fullwidth.json  nfkc-ligature.json  nfkc-precomposed-vs-combining.json  preserve-zwj-emoji-family.json  preserve-zwnj.json  strip-bidi-controls.json  strip-bom.json  strip-zwsp.json  whitespace-collapse.json
conformance/runners/: go.mod  run-go.go  run-javascript.mjs  run-php.php  run-python.py
conformance/runners/run-rust/: Cargo.toml
conformance/runners/run-rust/src/: main.rs
go/: canonicalize.go  canonicalize_test.go  endorsement.go  extract.go  go.mod  resolver.go  signature.go
javascript/: index.d.ts  index.js  package.json  test.js
php/: composer.json  phpunit.xml
php/src/: Canonicalize.php  Signature.php
php/src/Keys/: DidWebResolver.php  DirectUrlResolver.php  HttpFetcher.php  KeyResolution.php  KeyResolver.php  ResolvedKey.php  TrustDirectoryResolver.php
php/tests/: CanonicalizeClaimsTest.php  CanonicalizeTest.php  EndorsementTest.php  ExtractCanonicalTextTest.php  SignatureTest.php
php/tests/Keys/: DidWebResolverTest.php  DirectUrlResolverTest.php  KeyResolutionTest.php  TrustDirectoryResolverTest.php
python/: README.md  pyproject.toml
python/htmltrust_canonicalization/: __init__.py  _claims.py  _extract.py  _normalize.py
python/tests/: test_claims.py  test_extract.py  test_normalize.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: conformance.rs
