[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmltrust-canonicalization"
version = "0.1.0"
description = "Canonical text normalization and HTML extraction for HTMLTrust signed content. Byte-identical output to the JavaScript, Go, PHP, and Rust bindings."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [
    { name = "HTMLTrust contributors" },
]
keywords = ["htmltrust", "canonicalization", "signing", "html", "unicode"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/HTMLTrust/htmltrust-canonicalization"
Repository = "https://github.com/HTMLTrust/htmltrust-canonicalization"

[tool.setuptools.packages.find]
where = ["."]
include = ["htmltrust_canonicalization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
